--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,27 @@
+body, html {
+    font-family: 'Audiowide', cursive;
+}
+
 @-ms-viewport{
     width: device-width;
-  }
+}
+
+  /* // Extra small devices (portrait phones, less than 576px)
+@media only and screen (max-width: 575.98px) {
+    
+}
+
+// Small devices (landscape phones, less than 768px)
+@media only and screen (max-width: 767.98px) {
+
+}
+
+// Medium devices (tablets, less than 992px)
+@media only and screen (max-width: 991.98px) {
+    
+}
+
+// Large devices (desktops, less than 1200px)
+@media only and screen (max-width: 1199.98px) {
+
+} */
